# eduteams-cli

./: NOTICE  README.md  pyproject.toml
eduteams_cli/: main.py
tests/: test_eduteams_cli.py
